patient-admin_dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: patient-admin
spec:
  template:
    metadata:
      labels:
        name: patient-admin
    spec:
      containers:
      - name: patient-admin
        image: patient-admin:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
      - env:
        - name: apiBaseUrl
          value: http://example-health-api-health.192.168.42.218.nip.io
  replicas: 3
  selector:
    name: patient-admin
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - patient-admin
      from:
        kind: ImageStreamTag
        name: patient-admin:latest
