patient-admin_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: patientui-admin
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deploymentconfig: patientui-admin
